--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,11 +1,25 @@
-/* Medium screens 641px to 1024px */
-@media (min-width: 641px) and (max-width: 1024px) {
+@media screen and (min-width: 641px) {
   .grid-container {
-    grid-template-columns: repeat(2, 1fr);
     grid-template-areas:
       "card1 card2"
       "card3 card4"
       "card5 card6"
       "card7 card8";
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .card img:hover {
+    transform: scale(1.05);
+    filter: brightness(1.1);
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .grid-container {
+    grid-template-areas:
+      "card1 card2 card3 card4"
+      "card5 card6 card7 card8";
+    grid-template-columns: repeat(4, 1fr);
   }
 }
